--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
+
+    <script type="text/javascript" src="intro.js"></script>
     <div>
         <p>参加人数<br>
-            <input type="number" name="number" size="5" min="3" max="20" id="numberOfLines" value="5">
+            <input type="number" name="number" size="5" min="2" max="20" id="numberOfLines" value="5">
         </p>
         <p>あたりの数<br>
             <input type="number" name="number" size="3" min="1" max="20" id="numberOfWinners" value="1">
@@ -27,8 +29,7 @@
         <input type="button" value="実行" onclick="drawPath(selectIndex.value);" />
     </div>
 
-    <canvas id="SimpleCanvas" width="500" height="1000" style="background-color:#f9f7f8;"></canvas>
-
+    <canvas id="SimpleCanvas" width="600" height="1000" style="background-color:#f9f7f8;"></canvas>
     <script type="text/javascript" src="script.js"></script>
 </body>
 
