--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <script type="text/javascript" src="intro.js"></script>
+<!--     <script type="text/javascript" src="intro.js"></script> -->
     <div>
         <p>参加人数<br>
             <input type="number" name="number" size="5" min="2" max="20" id="numberOfLines" value="5">
